fixed alignment

--- a/website/Assets/CSS/Index.css
+++ b/website/Assets/CSS/Index.css
@@ -45,7 +45,7 @@ body {
 
 .username {
   position: absolute;
-  top: 200px;
+  top: 190px;
   color: #697079;
   font-size: 10px;
 }
